objects/SalesPipeline__c.object
<CustomObject>
    <fields>
        <fullName>ShoshaKeiyuKubun__c</fullName>
        <label>商社経由区分</label>
        <picklist>
            <picklistValues>
                <fullName>8</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShukkaYokyuTsuki__c</fullName>
        <label>出荷要求月</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SolidAttached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]固体付き</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spectrometer_serial__c</fullName>
        <label>[その他]本体製番（BAANから）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplementaryBudget__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>この区分は不要では？？予算区分で補正の判断は可能！</inlineHelpText>
        <label>補正予算</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Syouhaiin_Brand__c</fullName>
        <label>[その他]信頼度（ブランドイメージ）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Syouhaiin_Eigyou__c</fullName>
        <label>[その他]営業的要因</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Syouhaiin_Kinousouchi__c</fullName>
        <label>[その他]既納装置との関連(既納納置の稼働状況)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Syouhaiin_Seinou__c</fullName>
        <label>[その他]性能　機能評価</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Syouhaiin_Sousa__c</fullName>
        <label>[その他]操作性　スループット</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Syouhaiin_Tasyakakaku__c</fullName>
        <label>[その他]他社提示価格</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TaiTorihikiNebikigaku__c</fullName>
        <label>対引取り値引額</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TashaPrice__c</fullName>
        <label>AL金額</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>総額</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Undergraduate__c</fullName>
        <formula>CustomerAccount__r.Undergraduate__c</formula>
        <label>学部・事業所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateMethod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>0: Update by default
1: Update by thh WebMethod (in that case, do not change the record type, nor the LinkageStatus)

This field is just use in a trigger and the value will always be 0 in the database.</description>
        <label>UpdateMethod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UriageYoteiTsuki__c</fullName>
        <label>売上予定月</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WinLossAddedDateFormula__c</fullName>
        <formula>IF(ISNULL(WinLossAddedDateInput__c), Datevalue(WinLossAddedDate__c), WinLossAddedDateInput__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[勝敗因登録日]</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WinLossAddedDateInput__c</fullName>
        <inlineHelpText>「勝ち」入力時は販売オーダLink後に入力して下さい。</inlineHelpText>
        <label>勝敗因登録日（入力）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WinLossAddedDate__c</fullName>
        <label>[勝敗因登録日（連携）]</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WinLossReason__c</fullName>
        <label>勝敗因理由名称</label>
        <picklist>
            <picklistValues>
                <fullName>B01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B24</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WinLossResponsibleComment__c</fullName>
        <label>勝敗因担当者コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WinLossSuperiorComment__c</fullName>
        <label>勝敗因上長コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>YosanKakudoValue__c</fullName>
        <label>予算確度</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YosanKakudo__c</fullName>
        <label>[予算確度(A-E)]</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>YosanKubun__c</fullName>
        <label>予算区分</label>
        <picklist>
            <picklistValues>
                <fullName>A01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZZZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B07</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>YotoKubun__c</fullName>
        <label>用途区分</label>
        <picklist>
            <controllingField>YosanKubun__c</controllingField>
            <picklistValues>
                <fullName>A01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>hkbn__c</fullName>
        <formula>text(Shohin__r.Apply__c) == &apos;本体&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[本体/ATT&apos;S]</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hkbn_text__c</fullName>
        <label>[本体区分(テキスト)]</label>
        <picklist>
            <picklistValues>
                <fullName>本体</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>本体以外</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>katashiki__c</fullName>
        <formula>Shohin__r.ModelType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[形式]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maruhu_yes_no__c</fullName>
        <label>[その他]マルフ有無</label>
        <picklist>
            <picklistValues>
                <fullName>あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>なし</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>niban_juchu__c</fullName>
        <label>[その他]仮受注（2番）予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>reuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>リユース</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdsc_edit__c</fullName>
        <formula>ShohinNameFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品名(数式)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipping_date_NMR__c</fullName>
        <label>[その他]荷造日（本体）</label>
        <type>Date</type>
    </fields>
    <label>営業パイプライン</label>
    <listViews>
        <fullName>AI11</fullName>
        <columns>NAME</columns>
        <columns>RegionName__c</columns>
        <columns>Series__c</columns>
        <columns>EigyoTantoshaMain__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>Undergraduate__c</columns>
        <columns>CustomerResponsibleWinLoss__c</columns>
        <columns>ShohinNameFormula__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>WinLossResponsibleComment__c</columns>
        <columns>DecisionModel__c</columns>
        <columns>Competitors_offer__c</columns>
        <columns>CompanyName__c</columns>
        <columns>WinLossReason__c</columns>
        <columns>SalesOrderLkup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RegionName__c</field>
            <operation>equals</operation>
            <value>015,018</value>
        </filters>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>NM,MS</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>greaterOrEqual</operation>
            <value>2015/04</value>
        </filters>
        <filters>
            <field>ShodanSituation__c</field>
            <operation>equals</operation>
            <value>2:受注</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>A</value>
        </filters>
        <label>■勝ち(大阪・高松AI）</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>AI27</fullName>
        <columns>NAME</columns>
        <columns>RegionName__c</columns>
        <columns>Series__c</columns>
        <columns>ModelType__c</columns>
        <columns>ShohinNameInput__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>KakkoKubun__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>JuchuKakudoValue__c</columns>
        <columns>YosanKakudoValue__c</columns>
        <columns>EigyoTantoshaMain__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CreatedDateFormula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RegionName__c</field>
            <operation>equals</operation>
            <value>010,019</value>
        </filters>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>NM,ER</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsukin__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SalesPipeline__c.JEOL</value>
        </filters>
        <label>JRI_地域別受注予定(東京AI）</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>AI3</fullName>
        <columns>NAME</columns>
        <columns>RegionName__c</columns>
        <columns>Series__c</columns>
        <columns>EigyoTantoshaMain__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>ShohinNameFormula__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>TaiTorihikiNebikigaku__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>YosanKakudoValue__c</columns>
        <columns>JuchuKakudoValue__c</columns>
        <columns>Biko_Shodan__c</columns>
        <columns>ShodanSituation__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RegionName__c</field>
            <operation>equals</operation>
            <value>015,018</value>
        </filters>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>NM,MS</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsukin__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>notEqual</operation>
            <value>東京</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>A</value>
        </filters>
        <label>■受注予定(大阪・高松AI）</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>AI8</fullName>
        <columns>NAME</columns>
        <columns>RegionName__c</columns>
        <columns>Series__c</columns>
        <columns>EigyoTantoshaMain__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>Undergraduate__c</columns>
        <columns>CustomerResponsibleWinLoss__c</columns>
        <columns>ShohinNameFormula__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>WinLossResponsibleComment__c</columns>
        <columns>DecisionModel__c</columns>
        <columns>Competitors_offer__c</columns>
        <columns>CompanyName__c</columns>
        <columns>WinLossReason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RegionName__c</field>
            <operation>equals</operation>
            <value>015,018</value>
        </filters>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>NM,MS</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>greaterOrEqual</operation>
            <value>2015/04</value>
        </filters>
        <filters>
            <field>ShodanSituation__c</field>
            <operation>equals</operation>
            <value>3:失注</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>A</value>
        </filters>
        <label>■負け(大阪・高松AI）</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>EigyoTantoshaMain__c</columns>
        <columns>CustomerAccountNameFormula__c</columns>
        <columns>ShohinNameInput__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>YosanKakudoValue__c</columns>
        <columns>JuchuKakudoValue__c</columns>
        <columns>KakkoKubun__c</columns>
        <columns>YosanKubun__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>TashaPrice__c</columns>
        <columns>TaiTorihikiNebikigaku__c</columns>
        <columns>ShoshaKeiyuKubun__c</columns>
        <columns>Biko_Shodan__c</columns>
        <filterScope>Everything</filterScope>
        <label>全て選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>A_yam_All_Select</fullName>
        <columns>NAME</columns>
        <columns>CountryNamePicklist__c</columns>
        <columns>SeriesPicklist__c</columns>
        <columns>RegionNamePicklist__c</columns>
        <columns>Field13__c</columns>
        <columns>Field14__c</columns>
        <columns>ShodanSituation__c</columns>
        <columns>ShodanStatus__c</columns>
        <columns>SalesOrderLkup__c</columns>
        <columns>EigyoTantoshaMain__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>CustomerAccountNameFormula__c</columns>
        <columns>sdsc_edit__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>Field19__c</columns>
        <filterScope>Everything</filterScope>
        <label>_[A.yam] Select All</label>
    </listViews>
    <listViews>
        <fullName>CIS</fullName>
        <columns>NAME</columns>
        <columns>RegionName__c</columns>
        <columns>Series__c</columns>
        <columns>ModelType__c</columns>
        <columns>ShohinNameInput__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>KakkoKubun__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>JuchuKakudoValue__c</columns>
        <columns>YosanKakudoValue__c</columns>
        <columns>EigyoTantoshaMain__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CreatedDateFormula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>EM,XM,AP,EQ,SM,MP,IB,NM,MS</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SalesPipeline__c.JEOL</value>
        </filters>
        <filters>
            <field>RegionName__c</field>
            <operation>equals</operation>
            <value>211</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsukin__c</field>
            <operation>greaterOrEqual</operation>
            <value>11/1/2015</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsukin__c</field>
            <operation>lessOrEqual</operation>
            <value>4/30/2016</value>
        </filters>
        <label>受注予定◆CIS</label>
        <language>ja</language>
        <sharedTo>
            <group>SalesArea_121</group>
            <group>SalesArea_123</group>
            <group>SalesArea_124</group>
            <group>SalesArea_179</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EM12</fullName>
        <columns>ShodanSituation__c</columns>
        <columns>Maker__c</columns>
        <columns>NewUpdated__c</columns>
        <columns>ShodanNo_sync__c</columns>
        <columns>CustomerAccountNameFormula__c</columns>
        <columns>Biko_Shodan__c</columns>
        <columns>ShohinNameFormula__c</columns>
        <columns>YosanKakudoValue__c</columns>
        <columns>JuchuKakudoValue__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>TaiTorihikiNebikigaku__c</columns>
        <columns>Discount_rate__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>ShodanStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesPicklist__c</field>
            <operation>equals</operation>
            <value>EM</value>
        </filters>
        <filters>
            <field>CountryNamePicklist__c</field>
            <operation>equals</operation>
            <value>CHN</value>
        </filters>
        <filters>
            <field>ShodanSituation__c</field>
            <operation>notContain</operation>
            <value>失注,受注,中断</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>notContain</operation>
            <value>確定受注エントリー済,見込受注エントリー済,受注キャンセル</value>
        </filters>
        <filters>
            <field>NewUpdated__c</field>
            <operation>notContain</operation>
            <value>他社</value>
        </filters>
        <label>中国EM周報フォーマット_堀江確認作業用</label>
        <language>ja</language>
        <sharedTo>
            <group>SalesArea_212</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EO1</fullName>
        <columns>NAME</columns>
        <columns>RegionName__c</columns>
        <columns>Series__c</columns>
        <columns>ShohinNameInput__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>KakkoKubun__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>JuchuKakudoValue__c</columns>
        <columns>YosanKakudoValue__c</columns>
        <columns>EigyoTantoshaMain__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CreatedDateFormula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RegionName__c</field>
            <operation>equals</operation>
            <value>015,018</value>
        </filters>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>NM,MS</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsukin__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SalesPipeline__c.JEOL</value>
        </filters>
        <label>地域別受注予定(大阪AI）</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>EO10</fullName>
        <columns>NAME</columns>
        <columns>RegionName__c</columns>
        <columns>Series__c</columns>
        <columns>ModelType__c</columns>
        <columns>ShohinNameInput__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>KakkoKubun__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>JuchuKakudoValue__c</columns>
        <columns>YosanKakudoValue__c</columns>
        <columns>EigyoTantoshaMain__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CreatedDateFormula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesPicklist__c</field>
            <operation>equals</operation>
            <value>,EQ</value>
        </filters>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>EM,XM,AP,EQ,SM,MP,IB</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsukin__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SalesPipeline__c.JEOL</value>
        </filters>
        <label>地域別受注予定(大阪EO）</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>EO11</fullName>
        <columns>Series__c</columns>
        <columns>NAME</columns>
        <columns>EigyoTantoshaMain__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>ShodanSituation__c</columns>
        <columns>ShohinNameFormula__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>YosanKakudoValue__c</columns>
        <columns>JuchuKakudoValue__c</columns>
        <columns>KakkoKubun__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>TashaPrice__c</columns>
        <columns>Field27__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RegionName__c</field>
            <operation>equals</operation>
            <value>016</value>
        </filters>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>EM,XM,AP,EQ,SM,MP,IB,NM,MS</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SalesPipeline__c.JEOL</value>
        </filters>
        <filters>
            <field>ShodanNo_sync__c</field>
            <operation>notContain</operation>
            <value>B,C,D,E</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsukin__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>受注予定(広島SI)</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>EO13</fullName>
        <columns>NAME</columns>
        <columns>RegionName__c</columns>
        <columns>Series__c</columns>
        <columns>ModelType__c</columns>
        <columns>ShohinNameInput__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>KakkoKubun__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>JuchuKakudoValue__c</columns>
        <columns>YosanKakudoValue__c</columns>
        <columns>EigyoTantoshaMain__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CreatedDateFormula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>EM,XM,AP,EQ,SM,MP,IB</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsukin__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SalesPipeline__c.JEOL</value>
        </filters>
        <filters>
            <field>RegionName__c</field>
            <operation>equals</operation>
            <value>227</value>
        </filters>
        <label>地域別受注予定(韓国EO）</label>
        <language>ja</language>
    </listViews>
</CustomObject>